# s3-explorer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  design-tokens.json  railway.toml
src/: auth.rs  error.rs  main.rs  s3.rs  state.rs
src/routes/: copy.rs  delete.rs  download.rs  edit.rs  health.rs  list.rs  mod.rs  preview.rs  thumb.rs  upload.rs
static/: app.css  app.js
templates/: copy.html  edit.html  index.html  login.html  preview.html
