[package]
name = "s3-explorer"
version = "0.1.0"
edition = "2021"
description = "Private S3 bucket explorer for Railway Buckets with presigned URLs and proxy streaming"
license = "MIT"

[[bin]]
name = "s3-explorer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "auth", "trace", "set-header", "compression-gzip"] }
hyper = "1"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

askama = "0.14"

bytes = "1"
futures = "0.3"
mime_guess = "2"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png", "gif"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
